--- a/src/Components/WeatherApp/WeatherApp.css
+++ b/src/Components/WeatherApp/WeatherApp.css
@@ -1,7 +1,7 @@
 .background {
     display: flex;
     height: 1000px;
-    background-image: linear-gradient(180deg, #240754 0%, #522f80 100%);
+    background-image: linear-gradient(180deg, #070854 0%, #2f4980 100%);
 }
 
 .container {
@@ -10,7 +10,7 @@
     margin: auto;
     margin-top: 75px;
     border-radius: 12px;
-    background-image: linear-gradient(180deg, #070854 0%, #2f4980 100%);
+    background-image: linear-gradient(180deg, #29124e 0%, #582f8d 100%);
 }
 
 .top-bar{
